[package]
name = "hlp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dependencies]
scraper = "0.16"
thiserror = "1.0"
hayagriva = "0.3.0"
url = "2.3"
chrono = { version = "0.4", features = [ "wasmbind" ] }
console_error_panic_hook = "0.1.7"

[package.metadata.wasm-pack]
wasm-opt = false