[package]
name = "html-meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dependencies]
scraper = "0.16"
thiserror = "1.0"
hayagriva = "0.3"
url = "2.3"
chrono = { version = "0.4", features = [ "wasmbind" ] }
console_error_panic_hook = "0.1.7"
console_log = { version = "1", features = ["color"], optional = true }
log = "0.4"
wasm-bindgen = { version = "0.2", optional = true }
mime = "0.3"
unic-langid = "0.9"
isbn2 = "0.4"
regex = "1.7"
human_name = { git = "https://github.com/MordragT/human-name", branch = "master" }
deunicode = "1.3"

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "log/max_level_off", "console_log"]

[package.metadata.wasm-pack]
wasm-opt = false